full database added

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -31,7 +31,7 @@ services:
     ports:
       - "3000:3000"
     environment:
-      - BACKEND_API_URL=http://backend:8000
+      - NEXT_PUBLIC_BACKEND_API_URL=http://localhost:8000
       - NODE_ENV=development
     volumes:
       # Mount source code for hot reload
