--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,17 +10,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.6.2",
     "next": "^14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "axios": "^1.6.2"
+    "recharts": "^3.3.0"
   },
   "devDependencies": {
     "@types/node": "^20.10.5",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
-    "typescript": "^5.3.3",
     "eslint": "^8.55.0",
-    "eslint-config-next": "^14.0.4"
+    "eslint-config-next": "^14.0.4",
+    "typescript": "^5.3.3"
   }
 }
