--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -12,6 +12,9 @@ langchain==0.1.0
 langchain-community==0.0.10
 # langchain-nvidia-ai-endpoints  # Add this when you get Nemotron API access
 
+# OpenAI SDK (used for Nemotron API - compatible format)
+openai==1.12.0
+
 # Environment variables
 python-dotenv==1.0.0
 
